[package]
name = "todors"
description = "todo app with CLI, REST & gRPC interfaces"
readme = "README.md"
repository = "https://github.com/meysam81/todors"
documentation = "https://docs.rs/todors"
authors = ["Meysam <contact@meysam.io>"]
keywords = ["todo", "cli", "productivity", "http", "grpc"]
categories = [
    "command-line-utilities",
    "web-programming",
    "web-programming::http-server",
]
include = [
    ".cargo",
    "migrations",
    "proto",
    "src",
    "build.rs",
    "Cargo.toml",
    "LICENSE",
    "README.md",
]
exclude = [
    "Cargo.lock",
    ".github",
    ".gitignore",
    "docker",
    ".dockerignore",
    "Dockerfile",
    ".pre-commit-config.yaml",
    "Justfile",
    "sonar-project.properties",
]
license = "MIT"
version = "0.9.1"
edition = "2021"
rust-version = "1.68"

[dependencies]
actix-web = "4.3"
async-trait = "0.1.68"
chrono = "0.4.24"
clap = { version = "4.2.5", features = ["derive"] }
clap_complete = "4.2.0"
config = "0.13.3"
dirs = "5.0.1"
futures-util = { version = "0.3.28", default-features = false }
num_cpus = "1.15.0"
prost = "0.11.9"
serde = "1.0.160"
serde_json = "1.0.96"
slog = "2.7.0"
slog-async = "2.7.0"
slog-term = "2.9.0"
sqlx = { version = "0.6.3", features = [
    "sqlite",
    "runtime-tokio-rustls",
    "migrate",
] }
thiserror = "1.0.40"
tokio = { version = "^1.28", features = ["macros", "sync", "rt-multi-thread"] }
tonic = { version = "0.9.2", features = ["gzip"] }
utoipa = { version = "3.3.0", features = [
    "actix_extras",
    "openapi_extensions",
    "preserve_order",
] }
utoipa-swagger-ui = { version = "3.1.3", features = ["actix-web"] }

[dev-dependencies]
fake = { version = "2.6.1", features = ["derive"] }
just = "1.13.0"

[build-dependencies]
prost-build = { version = "0.11.9", default-features = false }
tonic-build = "0.9"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
