[package]
name = "todors"
description = "todo app with CLI, REST & gRPC interfaces"
readme = "README.md"
repository = "https://github.com/meysam81/todors"
documentation = "https://docs.rs/todors"
authors = ["Meysam <contact@meysam.io>"]
keywords = ["todo", "cli", "productivity", "http", "grpc"]
categories = [
    "command-line-utilities",
    "web-programming",
    "web-programming::http-server",
]
include = [
    "build.rs",
    ".cargo",
    "Cargo.toml",
    "LICENSE",
    "migrations",
    "proto",
    "README.md",
    "sqlx-data.json",
    "src",
]
exclude = [
    "Cargo.lock",
    ".github",
    ".gitignore",
    "docker",
    ".dockerignore",
    "Dockerfile",
    ".pre-commit-config.yaml",
    "Justfile",
    "sonar-project.properties",
]
license = "MIT"
version = "0.10.7"
edition = "2021"
rust-version = "1.65"

[features]
default = ["sqlite"]
sqlite = ["sqlx/sqlite"]

[dependencies]
actix-web = "4.3"
actix-web-prometheus = { version = "0.1.2", features = ["process"] }
async-trait = "0.1.80"
chrono = "0.4.38"
clap = { version = "4.4.8", features = ["derive"] }
clap_complete = "4.3.2"
config = "0.13.4"
dirs = "5.0.1"
futures-util = { version = "0.3.30", default-features = false }
num_cpus = "1.16.0"
prost = "0.11.9"
serde = "1.0.203"
serde_json = "1.0.118"
slog = "2.7.0"
slog-async = "2.8.0"
slog-term = "2.9.1"
sqlx = { version = "0.6.3", features = [
    "runtime-tokio-rustls",
    "migrate",
    "offline",
] }
thiserror = "1.0.61"
tokio = { version = "^1.38", features = ["macros", "sync", "rt-multi-thread"] }
tonic = { version = "0.9.2", features = ["gzip"] }
utoipa = { version = "3.5.0", features = [
    "actix_extras",
    "openapi_extensions",
    "preserve_order",
] }
utoipa-swagger-ui = { version = "3.1.5", features = ["actix-web"] }

[dev-dependencies]
fake = { version = "2.9.2", features = ["derive"] }
just = "1.26.0"
rand = "0.8.5"
serial_test = { version = "2.0.0", default-features = false }

[build-dependencies]
prost-build = { version = "0.13.1", default-features = false }
tonic-build = "0.9"

[profile.release]
lto = "fat"
codegen-units = 1
panic = "abort"
strip = true
